--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -163,3 +163,75 @@ a {
   display: block;
   padding: 3px;
 }
+
+/*------------------------------ NAVBAR ------------------------------*/
+
+.login-btn {
+	padding-top: 9px;
+	color: #999;
+	font-weight: 500;
+	font-size: 11px;
+	display: block;
+}
+
+.login-btn:hover {
+	color: #da552f;
+}
+
+.navbar {
+	text-align: center;
+	padding: 10px 10px 5px; /* top-right-bottom and if no left, then the same as right */
+}
+
+.navbar .left-side {
+	float: left;
+}
+
+.navbar .left-side .product-search {
+	background-color: #f2f2f2;
+	color: #999999;
+	border: 1px solid #f2f2f2;
+	border-radius: 4px;
+	font-size: 11px;
+	font-weight: 500;
+	height: 30px;
+	width: 200px;
+	outline: 0;
+}
+
+.navbar .right-side {
+	float: right;
+}
+
+.navabr .right-side > * {
+	display: inline-block;
+	vertical-align: middle;
+	margin-left: 15px;
+}
+
+.navbar .right-side a:hover {
+	color: #da552df;
+}
+
+/*------------------------------ POPUP ------------------------------*/
+
+.popup .popup-wrapup {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background-color: white;
+	opacity: 0.97;
+}
+
+.popup .popup-wrapup img {
+	position: fixed;
+	top: 40px;
+	left: 40px;
+	cursor: pointer;
+}
+
+.popup .popup-content {
+	position: fixed;
+}
