--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -139,6 +139,12 @@ a {
   border-radius: 50%;
 }
 
+.medium-avatar {
+	width: 32px;
+	height: 32px;
+	border-radius: 50%;
+}
+
 /*------------------------------ UPVOTE BUTTON ------------------------------*/
 
 .upvote-button {
@@ -322,4 +328,38 @@ button:hover {
 	outline: 0;
 	font-size: 13px;
 	width: 100%;
+}
+
+/*------------------------------ PROFILE MENU ------------------------------*/
+
+.profile-menu .profile-btn {
+	opacity: 0.9;
+}
+
+.profile-menu .profile-btn:hover {
+	cursor: pointer;
+	opacity: 1;
+}
+
+.profile-menu .profile-nav {
+	position: fixed;
+	top: 55px;
+	right: 20px;
+	background: white;
+	border-radius: 4px;
+	text-align: left;
+}
+
+.profile-menu .profile-nav a {
+	display: block;
+	width: 140px;
+	font-size: 15px;
+	line-height: 38px;
+	padding: 0 20px;
+	color: #bbb;
+}
+
+.profile-menu .profile-nav a:hover {
+	background-color: #f2f2f2;
+	border-radius: 4px;
 }
