--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -330,6 +330,110 @@ button:hover {
 	width: 100%;
 }
 
+/*------------------------------ PRODUCT POPUP ------------------------------*/
+
+.product-popup {
+	width: 80%;
+	height: 100%;
+	right: 0;
+	top: 0;
+	background-color: white;
+	overflow: scroll;
+	border-left: 1px solid #f0efefl;
+}
+
+.product-popup header {
+	text-align: center;
+	background-color: #5e9aee;
+	background-position: 50% 50%;
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
+.product-popup header .header-shadow {
+	background-color: transparent;
+	background-image: linear-gradient(-225deg rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%);
+	padding: 45px;
+}
+
+.product-popup header .header-shadow > h1 {
+	font-size: 40px;
+	font-weight: 900;
+	color: white;
+	line-height: 48px;
+}
+
+.product-popup header .header-shadow > p {
+	line-height: 55px;
+	font-size: 18px;
+	color: #cdd1d3;
+}
+
+.product-popup header .header-shadow > section > * {
+	display: inline-block;
+	vertical-align: middle;
+}
+
+.product-popup header .header-shadow > section .getit-btn {
+	border-radius: 4px;
+	padding: 15px 25px;
+	background-color: #5898f1;
+	color: white;
+}
+
+.product-popup .product-popup-body main .discussion {
+	margin: 50px auto;
+	width: 80%;
+}
+
+.product-popup .product-popup-body main .discussion h2 {
+	color: #999;
+	padding-bottom: 20px;
+}
+
+.product-popup .product-popup-body main .discussion .post-comment {
+	margin: 10px 0;
+	padding: 20px;
+	background-color: #f9f9f9;
+	border-radius: 4px;
+	-webkit-display: flex;
+	display: flex;
+	-webkit-align-items: center;
+	align-items: center;
+}
+
+.product-popup .product-popup-body main .discussion .post-comment img {
+	margin-right: 15px;
+}
+
+.product-popup .product-popup-body main .discussion .post-comment input {
+	padding: 10px;
+	font-size: 15px;
+	width: 90%;
+	border: 1px solid #f0efef;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*------------------------------ PROFILE MENU ------------------------------*/
 
 .profile-menu .profile-btn {
@@ -343,7 +447,7 @@ button:hover {
 
 .profile-menu .profile-nav {
 	position: fixed;
-	top: 55px;
+	top: 65px;
 	right: 20px;
 	background: white;
 	border-radius: 4px;
@@ -361,5 +465,6 @@ button:hover {
 
 .profile-menu .profile-nav a:hover {
 	background-color: #f2f2f2;
+	color: #e08f76;
 	border-radius: 4px;
 }
