added style to comment box and fixed linear gradient syntax

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -352,7 +352,7 @@ button:hover {
 
 .product-popup header .header-shadow {
 	background-color: transparent;
-	background-image: linear-gradient(-225deg rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%);
+	background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%);
 	padding: 45px;
 }
 
@@ -414,24 +414,30 @@ button:hover {
 }
 
 
+.comments-list li {
+	padding: 20px 0;
+}
 
+.comments-list li > * {
+	/* a way to create kind of a row */
+	display: inline-block;
+	vertical-align: top;
+}
 
+.comments-list li > section {
+	margin-left: 15px;
+}
 
+.comments-list li > section strong {
+	font-size: 14px;
+	font-weight: 600;
+	display: inline-block;
+	margin-bottom: 15px;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.comments-list li > section p {
+	font-size: 14px;
+}
 
 
 /*------------------------------ PROFILE MENU ------------------------------*/
